--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <header class="mb-5 fixed w-full">
+    <header class="mb-5 fixed w-full z-50">
         <nav>
             <div class="navbar bg-gray-200 shadow-md px-8">
                 <div class="flex-1">
                     <a class="text-2xl font-semibold ">
-                        Logo Here
+                        <img class="w-36" src="./img/logo.png" alt="">
                     </a>
                 </div>
                 <div class="flex-none gap-2 ">
@@ -46,14 +46,142 @@
     </header>
 
     <main>
-        <section class="header">
-            <h2 class="text-[42px] font-[600]">Trade In Offer</h2>
+        <section class="header flex flex-col justify-center items-center lg:items-start px-[80px] ">
+            <h2 class="text-[42px] font-[600] text-[#262626]">Trade In Offer</h2>
             <h3 class="text-[36px] font-[600]">Super Value Deals</h3>
-            <h3 class="text-[36px] font-[600] text-[#46cef8]">On all Products</h3>
+            <h3 class="text-[36px] font-[600] text-[#088178]">On all Products</h3>
             <p class="text-xl">Save more With Coupons & up to 70% off!</p>
-            <button class="my-5">Shop Now</button>
+            <button class="my-5 bg-[#088178] text-[#dee2e4] py-2 px-8 rounded-full hover:bg-[#065853] duration-200">
+                <p class="font-semibold text-[16px]">Shop Now</p>
+            </button>
         </section>
+
+        <section class="px-[80px] py-[40px]">
+            <div id="feature " class="flex flex-wrap justify-between items-center">
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f1.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f2.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f3.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f4.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f5.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+                <div
+                    class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
+                    <img class="w-full mb-2" src="./img/features/f6.png" alt="">
+                    <h3 class="bg-red-200 inline px-[8px] py-[5px] rounded-sm">Free Shipping</h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="my-8 py-[80px] px-[40px]">
+            <h2 class="text-3xl text-[#262626] font-semibold text-center">Featured Product</h2>
+            <p class="text-[18px] text-gray-400 text-center">Summer Collection New Modern Design</p>
+            <div id="first-product-container" class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2">
+
+            </div>
+
+        </section>
+
+        <section id="banner" class="flex flex-col justify-center items-center py-9 my-5">
+            <h4 class="text-white text-[32px] font-semibold">Repair Services</h4>
+            <h1 class="text-center text-white text-[36px] font-semibold my-2">Up to <span class="text-[#088178]">70%
+                    off</span> -All
+                T-Shirts &
+                Accessories</h1>
+            <button
+                class="mt-3 px-5 py-1 bg-[#F7EBCC] text-[#088178] font-semibold rounded-md border border-white hover:bg-[#088178] duration-500  hover:border-[#088178] hover:text-white">Explore
+                More</button>
+        </section>
+
+        <section id="sm-banner" class="px-[40px] py-[80px] flex justify-between items-center">
+            <div class="banner-box flex justify-center items-start flex-col">
+                <h2 class="text-3xl font-semibold text-white ">Crazy Deals</h2>
+                <h4 class="text-4xl text-white font-bold">Buy 1 get 1 Free</h4>
+                <span class="text-white font-semibold text-xl">The Best Classic Dress is on sale at Shop In All</span>
+                <button
+                    class="mt-3 px-5 py-1 bg-transparent text-[#fff] font-semibold border border-white hover:bg-[#088178] duration-500  hover:border-[#088178] hover:text-white">
+                    Explore More
+                </button>
+            </div>
+            <div class="banner-box flex justify-center items-start flex-col">
+                <h2 class="text-3xl font-semibold text-white ">spring/summer</h2>
+                <h4 class="text-4xl text-white font-bold">Upcoming Seasons</h4>
+                <span class="text-white font-semibold text-xl">The Best Classic Dress is on sale at Shop In All</span>
+                <button
+                    class="mt-3 px-5 py-1 bg-transparent text-[#fff] font-semibold border border-white hover:bg-[#088178] duration-500  hover:border-[#088178] hover:text-white">
+                    Explore More
+                </button>
+            </div>
+        </section>
+
+        <section id="banner3" class="grid lg:grid-cols-3 md:grid-cols-2 px-[20px] py-[40px]">
+            <div class="banner-box flex flex-col justify-center items-start m-3">
+                <h2 class="text-2xl font-bold text-white">Seasonal Sale</h2>
+                <h3 class="text-xl font-bold text-white">Winter Collection -50% off</h3>
+            </div>
+            <div class="banner-box flex flex-col justify-center items-start m-3">
+                <h2 class="text-2xl font-bold text-white">New Footwear Collection</h2>
+                <h3 class="text-xl font-bold text-white">Spring/Summer 2022</h3>
+            </div>
+            <div class="banner-box flex flex-col justify-center items-start m-3">
+                <h2 class="text-2xl font-bold text-white">T-Shirts</h2>
+                <h3 class="text-xl font-bold text-white">New Trendy Products</h3>
+            </div>
+        </section>
+
     </main>
+
+    <footer class="footer p-10 bg-gray-200 shadow-lg">
+        <div>
+            <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+                clip-rule="evenodd" class="fill-current">
+                <path
+                    d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                </path>
+            </svg>
+            <p>ACME Industries Ltd.<br>Providing reliable tech since 1992</p>
+        </div>
+        <div>
+            <span class="footer-title">Services</span>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </div>
+        <div>
+            <span class="footer-title">Company</span>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </div>
+        <div>
+            <span class="footer-title">Legal</span>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </div>
+    </footer>
+    <script src="firstProduct.js"></script>
+    <script src="secondProduct.js"></script>
 </body>
 
 </html>
