--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="my-8 py-[80px] px-[40px]">
+        <section class="my-8 px-[50px] w-10/12 mx-auto">
             <h2 class="text-3xl text-[#262626] font-semibold text-center">Featured Product</h2>
             <p class="text-[18px] text-gray-400 text-center">Summer Collection New Modern Design</p>
             <div id="first-product-container" class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2">
