--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="mx-4 hover:text-green-400" href="">Shop</a>
                         <a class="mx-4 hover:text-green-400" href="">Contact</a>
                     </div>
-                    <div class="dropdown dropdown-end lg:hidden md:block">
+                    <div class="dropdown dropdown-end lg:hidden block">
                         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
                             <i class="fa-solid fa-bars text-xl"></i>
                         </label>
@@ -56,7 +56,7 @@
             </button>
         </section>
 
-        <section class="px-[80px] py-[40px]">
+        <section class="px-[30px] py-[20px]">
             <div id="feature " class="flex flex-wrap justify-between items-center">
                 <div
                     class="feature-box m-3 w-[170px] text-center px-[15px] py-[25px] border border-gray-400 rounded-md shadow-md hover:shadow-xl">
@@ -91,10 +91,10 @@
             </div>
         </section>
 
-        <section class="my-8 px-[50px] w-10/12 mx-auto">
+        <section class="my-8 py-[80px] px-[40px]">
             <h2 class="text-3xl text-[#262626] font-semibold text-center">Featured Product</h2>
             <p class="text-[18px] text-gray-400 text-center">Summer Collection New Modern Design</p>
-            <div id="first-product-container" class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2">
+            <div id="first-product-container" class="grid lg:grid-cols-4 md:grid-cols-3 grid-cols-1">
 
             </div>
 
@@ -111,7 +111,7 @@
                 More</button>
         </section>
 
-        <section id="sm-banner" class="px-[40px] py-[80px] flex justify-between items-center">
+        <section id="sm-banner" class="px-[40px] py-[80px] lg:flex flex-wrap justify-between items-center">
             <div class="banner-box flex justify-center items-start flex-col">
                 <h2 class="text-3xl font-semibold text-white ">Crazy Deals</h2>
                 <h4 class="text-4xl text-white font-bold">Buy 1 get 1 Free</h4>
